# SentinelLog

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
src/: cli.py  config.py  models.py  reporter.py
src/detectors/: base.py  brute_force.py  failed_sudo.py  port_scan.py  suspicious_ip.py
src/parsers/: auth_log.py  base.py
tests/: test_cli.py  test_config.py  test_models.py  test_reporter.py
tests/fixtures/: auth.log.sample
tests/test_detectors/: test_brute_force.py  test_failed_sudo.py  test_port_scan.py  test_suspicious_ip.py
tests/test_parsers/: test_auth_log.py
